--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -28,7 +28,7 @@
     "from scipy.stats import linregress\n",
     "\n",
     "# Import API key\n",
-    "from api_keys import weather_api_key\n",
+    "from weather_api_key import weather_api_key\n",
     "\n",
     "# Incorporated citipy to determine city based on latitude and longitude\n",
     "from citipy import citipy\n",
@@ -50,16 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "635"
+       "629"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,13 +309,7 @@
       "Processing Record 32 of Set 4 | plettenberg bay\n",
       "Processing Record 33 of Set 4 | lorengau\n",
       "Processing Record 34 of Set 4 | hay river\n",
-      "Processing Record 35 of Set 4 | kodiak\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Processing Record 35 of Set 4 | kodiak\n",
       "Processing Record 36 of Set 4 | chimbote\n",
       "Processing Record 37 of Set 4 | kanor\n",
       "Processing Record 38 of Set 4 | san pedro de uraba\n",
@@ -520,13 +514,7 @@
       "City not found. Skipping...\n",
       "Processing Record 25 of Set 8 | hervey bay\n",
       "Processing Record 26 of Set 8 | uchiza\n",
-      "Processing Record 27 of Set 8 | mys shmidta\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Processing Record 27 of Set 8 | mys shmidta\n",
       "City not found. Skipping...\n",
       "Processing Record 28 of Set 8 | porto walter\n",
       "Processing Record 29 of Set 8 | horsham\n",
@@ -726,13 +714,7 @@
       "City not found. Skipping...\n",
       "Processing Record 16 of Set 12 | kaohsiung\n",
       "Processing Record 17 of Set 12 | shache\n",
-      "Processing Record 18 of Set 12 | divnoye\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Processing Record 18 of Set 12 | divnoye\n",
       "Processing Record 19 of Set 12 | barra dos coqueiros\n",
       "Processing Record 20 of Set 12 | provideniya\n",
       "Processing Record 21 of Set 12 | norman wells\n",
@@ -1852,7 +1834,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.10"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -1877,5 +1859,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
